<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.boomi.connector</groupId>
    <artifactId>kafkav2connector</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>KafkaV2</name>
    <repositories>
        <!-- Specification of the Boomi SDK repository -->
        <repository>
            <id>boomisdk</id>
            <name>Connector SDK Repository</name>
            <url>https://boomisdk.s3.amazonaws.com/releases</url>
        </repository>
        <!-- nexus -->
        <repository>
            <id>boomi-repo</id>
            <url>http://builds.lab.boomi.com:8080/nexus/content/groups/public</url>
        </repository>
        <repository>
        <id>confluent</id>
        <url>https://packages.confluent.io/maven/</url>
    </repository>
    </repositories>
    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <kerby.version>2.0.0-boomi1</kerby.version>
        <connector.sdk.version>2.15.6</connector.sdk.version>
        <kafka.client.version>3.2.1-boomi1</kafka.client.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.release.plugin.version>3.0.0-M6</maven.release.plugin.version>
        <jackson.version>2.16.1</jackson.version>
        <container.version>23.11.6</container.version>
        <maven.test.skip>true</maven.test.skip>
    </properties>
    <dependencies>
        <!-- system -->
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-clients</artifactId>
            <version>${kafka.client.version}</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/kafka-clients-${kafka.client.version}.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.kerby</groupId>
            <artifactId>kerb-client</artifactId>
            <version>${kerby.version}</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/kerb-client-${kerby.version}.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.kerby</groupId>
            <artifactId>kerb-gssapi</artifactId>
            <version>${kerby.version}</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/kerb-gssapi-${kerby.version}.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.kerby</groupId>
            <artifactId>kerb-common</artifactId>
            <version>${kerby.version}</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/kerb-common-${kerby.version}.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.boomi.redsky.container</groupId>
            <artifactId>container-execution</artifactId>
            <version>${container.version}</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/container-execution-${container.version}.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.boomi.redsky.container</groupId>
            <artifactId>container-config</artifactId>
            <version>${container.version}</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/container-config-${container.version}.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.boomi.redsky.container</groupId>
            <artifactId>container-component</artifactId>
            <version>${container.version}</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/container-component-${container.version}.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.boomi.docsdk</groupId>
            <artifactId>document-sdk-api</artifactId>
            <version>1.1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/document-sdk-api-1.1.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.github.luben</groupId>
            <artifactId>zstd-jni</artifactId>
            <version>1.5.2-1</version>
        </dependency>
        <dependency>
            <groupId>org.lz4</groupId>
            <artifactId>lz4-java</artifactId>
            <version>1.8.0</version>
        </dependency>
        <dependency>
            <groupId>org.xerial.snappy</groupId>
            <artifactId>snappy-java</artifactId>
            <version>1.1.8.4</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.36</version>
        </dependency>
        <dependency>
            <groupId>org.apache.kerby</groupId>
            <artifactId>kerby-config</artifactId>
            <version>2.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.kerby</groupId>
            <artifactId>kerb-core</artifactId>
            <version>2.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.kerby</groupId>
            <artifactId>kerb-util</artifactId>
            <version>2.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.kerby</groupId>
            <artifactId>kerb-crypto</artifactId>
            <version>2.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.kerby</groupId>
            <artifactId>token-provider</artifactId>
            <version>2.0.0</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.6</version>
            <scope>compile</scope>
        </dependency>
        <!-- compile -->
        <dependency>
            <groupId>com.boomi.connsdk</groupId>
            <artifactId>connector-sdk-util</artifactId>
            <version>${connector.sdk.version}</version>
        </dependency>
        <!-- provided -->
        <dependency>
            <groupId>com.boomi.connsdk</groupId>
            <artifactId>connector-sdk-api</artifactId>
            <version>${connector.sdk.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.confluent/kafka-avro-serializer -->
        <dependency>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro</artifactId>
            <version>1.11.3</version>
        </dependency>
        <dependency>
            <groupId>io.confluent</groupId>
            <artifactId>kafka-avro-serializer</artifactId>
            <version>7.6.0</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.boomi.util</groupId>
            <artifactId>boomi-json-util</artifactId>
            <version>1.1.9</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.boomi.util</groupId>
            <artifactId>boomi-util</artifactId>
            <version>2.3.8</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.boomi.util</groupId>
            <artifactId>common-lite</artifactId>
            <version>1.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- test -->
        <dependency>
            <groupId>com.boomi.connsdk</groupId>
            <artifactId>connector-sdk-test-util</artifactId>
            <version>${connector.sdk.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.sun.xml.bind</groupId>
                    <artifactId>jaxb-impl</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>1.10.19</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <!-- CAR Assembly File Config -->
    <build>
        <resources>
            <resource>
                <directory>src/main/java/resources</directory>
                <targetPath>resources</targetPath>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <plugins>
            <!--
            <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId><version>2.21.0</version><dependencies><dependency><groupId>org.junit.platform</groupId><artifactId>junit-platform-surefire-provider</artifactId><version>1.2.0-M1</version></dependency><dependency><groupId>org.junit.jupiter</groupId><artifactId>junit-jupiter-engine</artifactId><version>5.2.0-M1</version></dependency></dependencies>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration combine.self="override">
                    <descriptors>
                        <descriptor>src/assembly/assembly.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>14</source>
                    <target>14</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>--add-exports=java.security.sasl/com.sun.security.sasl.util=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.security.sasl/com.sun.security.sasl=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>